@@ -222,6 +222,7 @@ export(brm)
 export(brmsfamily)
 export(brmsformula)
 export(categorical)
+export(combine_models)
 export(compare_ic)
 export(control_params)
 export(cor_ar)
